# gp

./: .env  MANIFEST.in  README.md  install_tool.py  installer.py  main.py  pyproject.toml  requirements.txt  setup.cfg  userSetup.py
authDB/: auth.xlsx  auth_hashed_pw.py  exel_creator.py
backend/authDB/: db.py  sheetToMongo.py
blender/: addon.py
gp_clean.egg-info/: PKG-INFO  SOURCES.txt
gpclean/: installer.py  logging_setup.py  main.py
gpclean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gpclean/backend/authDB/: auth_hashed_pw.py  exel_creator.py  sheetToMongo.py
gpclean/blender/: addon.py
gpclean/ui/: menu.py
gpclean/ui/login/: login.ui  login_controller.py  login_view.py
gpclean/ui/main/: controller.py  model.py  view.py
ui/: controller.py  menu.py  model.py  view.py
ui/login/: __init__.py  login_controller.py  login_view.py
ui/main/: main.ui  model.py  view.py
