[project]
name = "gpclean"
version = "0.1.0"
description = "Cool login and backend system made by Seyoung"
authors = [
  { name="Seyoung", email="you@example.com" }
]
readme = ""
requires-python = ">=3.8"
dependencies = [
  "pymongo>=4.7.0",
  "openpyxl>=3.1.2",
  "gspread>=5.12.0",
  "oauth2client>=4.1.3",
  "PySide6>=6.7.0",
  "PySide2>=5.15.2"  # Fallback
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["gpclean*"]